# vscode-notebook-mcp-server

./: .gitignore  README.md  pyproject.toml  test_execution.py  test_server.py
notebooks/: demo.ipynb  hello_world.ipynb  test_demo.ipynb
src/vscode_notebook_mcp_server/: __init__.py  __main__.py  cell_manager.py  exceptions.py  execution_manager.py  notebook_manager.py  security.py  server.py
